# smart_financial_solutions

./: .env.example  Dockerfile  Dockerfile.frontend  LICENSE  README.md  compose.yml  nfe_agent_workflow_generated.json  nfe_processing_workflow.json
backend/: pyproject.toml  requirements.txt
backend/src/: exception_handler.py  main.py  settings.py
backend/src/agents/: __init__.py  base_agent.py  data_analyst_agent.py  data_engineer.py  supervisor_agent.py
backend/src/controllers/: agent_controller.py  db_controller.py
backend/src/schemas/: __init__.py  model_schemas.py  user_schemas.py
backend/src/services/: __init__.py  chat_model.py  data_processing.py  db_services.py
backend/src/tools/: data_analysis_tool.py  parser_tool.py  python_tool.py  use_agent_tool.py  utils_tool.py
backend/src/utils/: exceptions.py
docs/: architecture.excalidraw
