[project]
name = "smart_financial_solutions"
version = "0.1.0"
description = "Solution for data analysis using multi-agents with LangGraph."
readme = "README.md"
requires-python = ">=3.10.7"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.116.2",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain[google-genai,groq]>=0.3.27",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langsmith>=0.4.28",
    "numexpr>=2.10.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "tabulate>=0.9.0",
]

[tool.ruff.format]
quote-style = "single"
